# encrypted-notes-app

./: Cargo.toml  README.md
keys/: build-a-palindrome-checker.txt-keys.txt
src/: decrypt.rs  encrypt.rs  main.rs
web/: index.html  script.js  styles.css
